# tms-dev-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.ko.md  README.md  env.example  pyproject.toml  ruff.toml  setup.cfg
.github/: prlint.json
.github/workflows/: auto_release.yml  claude-code-review.yml  claude.yml  code_review.yml  lint_and_test.yaml  manual_release.yml  update-docs.yml
myproject/: config.py
scripts/: clean_local_branches.sh  update_docs.sh
tests/: conftest.py
tests/test_pipeline/: test_utils.py
tests/test_tools/: test_doc_tools.py
tms_mcp/: config.py  main.py
tms_mcp/docs/: basic_info.md
tms_mcp/docs/inavi/: endpoints_summary.md  openapi.json
tms_mcp/docs/inavi/overviews/: coordinates.json  maps_v3.0_appkeys_{appkey}_coordinates.json  maps_v3.0_appkeys_{appkey}_multi-coordinates.json  maps_v3.0_appkeys_{appkey}_multi-optimal-searches.json  maps_v3.0_appkeys_{appkey}_route-distance-matrix.json  maps_v3.0_appkeys_{appkey}_route-time.json  multi-optimal-searches.json  route-normal-via.json  route-time.json
tms_mcp/docs/integration_patterns/: agentic_coding_guidelines.md
tms_mcp/docs/integration_patterns/last_mile/: basic.md
tms_mcp/docs/omelet/: endpoints_summary.md  openapi.json
tms_mcp/docs/omelet/overviews/: advanced-vrp-long.json  advanced-vrp.json  cost-matrix.json  (+11 more)
tms_mcp/docs/troubleshooting/: list.md
tms_mcp/pipeline/: __init__.py  graph.py  models.py  pipeline.py  providers.py  utils.py
tms_mcp/pipeline/generators/: base.py  endpoints.py  examples.py  schemas.py
tms_mcp/tools/: doc_tools.py
(+52 files in other folders)
