[project]
name = "tms-mcp"
version = "0.1.2"
description = "MCP server for exploring Omelet's Routing Engine and iNavi's Maps API to help build a TMS"
authors = [
    {name = "Juni", email = "juni.lee@omelet.ai"},
]
requires-python = "~=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastmcp>=2.11.0",
    "jsonref>=1.1.0",
    "jsonschema>=4.23.0",
    "langchain-aws>=0.2.15",
    "langgraph>=0.5.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "python-json-logger>=3.2.1",
]

[project.scripts]
tms-mcp-server = "tms_mcp.main:main"

[dependency-groups]
precommit = [
    "mypy>=1.13.0",
    "pre-commit~=4.0.0",
    "types-pytz>=2024.2.0.20241003",
    "types-requests>=2.32.0.20241016",
]
test = [
    "pytest>=8.3.4",
]

[tool.uv]
package = true
